Matrix: use default inline display to avoid alignment errors

--- a/src/style.scss
+++ b/src/style.scss
@@ -94,7 +94,6 @@ $line-border: 0.08em solid currentColor;
     }
 
     .matrix {
-        display: inline-block;
         padding: 0.1em 0;
         .matrix-table {
             display: inline-table;
